# Artery-C

./: .cproject  .gitmodules  .nedfolders  .project  CMakeLists.txt  Makefile  README.md  package.ned
cmake/: GenerateOppMessage.cmake  GetNedFolders.cmake
scenarios/: CMakeLists.txt
scenarios/artery/: .tkenvlog  omnetpp.ini
scenarios/highway-police/: .tkenvlog
scenarios/highway-police/results/: envmod-#0.vci  envmod-#0.vec
scenarios/highway-tunnel/: .tkenvrc  lte_channel.xml  omnetpp.ini  sidelink_configuration.xml  tunnel.poly.xml  tunnel.rou.xml  tunnel.speedsign.add.xml  tunnel.sumo.cfg  tunnel_fcd.xml
scenarios/intas/scenario/: InTAS.simulation.statistic.xml  InTAS.simulation.summary.xml  InTAS.simulation.tripinfo.xml  InTAS_cellsites.xml  InTAS_full_poly.sumocfg  enodeb_poi.add.xml  lte_channel.xml  omnetpp.ini  sensors.xml  services.xml
scenarios/intas/scenario/cellsites/: cellsites.csv  cellsites.xml  cellsites_omnet.txt
scenarios/intas/scenario/cellsites/routes/: InTAS_001.rou.xml  InTAS_002.rou.xml  InTAS_003.rou.xml  InTAS_004.rou.xml  InTAS_005.rou.xml  InTAS_006.rou.xml  InTAS_007.rou.xml  InTAS_008.rou.xml  InTAS_009.rou.xml  InTAS_010.rou.xml  InTAS_011.rou.xml  InTAS_012.rou.xml  InTAS_013.rou.xml  InTAS_014.rou.xml  InTAS_015.rou.xml  InTAS_016.rou.xml  InTAS_017.rou.xml  InTAS_018.rou.xml  InTAS_019.rou.xml  InTAS_020.rou.xml  InTAS_021.rou.xml
scenarios/intas/scenario/configs/: etsi_mode3_p100.ini  etsi_mode3_p25.ini  etsi_mode3_p50.ini  etsi_mode3_p75.ini  etsi_mode4_p100.ini  etsi_mode4_p25.ini  etsi_mode4_p50.ini  etsi_mode4_p75.ini  fixed_300ms_mode3_p100.ini  fixed_300ms_mode3_p25.ini  fixed_300ms_mode3_p50.ini  fixed_300ms_mode3_p75.ini  fixed_300ms_mode4_p100.ini  fixed_300ms_mode4_p25.ini  fixed_300ms_mode4_p50.ini  fixed_300ms_mode4_p75.ini  services_p25.xml  services_p50.xml  services_p75.xml
scenarios/intas/scenario/red_routes/: BusRoutes.flow.xml  InTAS_005.rou.xml  InTAS_010.rou.xml  InTAS_014.rou.xml  InTAS_016.rou.xml  ped.rou.xml
scenarios/lte-blackice/: omnetpp.ini
scenarios/lte-blackice/results/: BlackIce-D2DMulticast-#0.elog  BlackIce-D2DMulticast-#0.vci  BlackIce-D2DMulticast-#0.vec  BlackIce-record-backend-#0.elog  BlackIce-record-backend-#0.vci  BlackIce-record-backend-#0.vec
scenarios/platooning/: omnetpp.ini  platoon.rou.xml  platoon.sumo.cfg  platoon_poi.add.xml
scenarios/roundabout/: 5GoIng.net.xml  5GoIng.passenger.trips.xml  5GoIng.poly.xml  5GoIng.sumocfg  5GoIng.trips.xml  5GoIng.trucks.trips.xml  BusRoutes.flow.xml  LICENSE  busStop.add.xml  busroute.rou.xml  enodeb_poi.add.xml  gui_settings.settings.xml  omnetpp.ini  passenger.rou.alt.xml  passenger.rou.xml  routes.rou.alt.xml  routes.rou.xml  services.xml  trips.trips.xml  trucks.rou.alt.xml  trucks.rou.xml  typemap.xml
scenarios/simulte/: omnetpp.ini  simulte.rou.xml
scenarios/tools/cellsites_sumo/: cellsites.py  selectroutes.py
scenarios/tools/hexagonal_cells/hexagonal-cells-sumo/: hex-cells.py  requirements.txt
scenarios/tools/hexagonal_cells/hexagonal-cells-sumo/sumo-scenarios/highway-tunnel/: cells.xml  omnetpp.ini  tunnel.rou.xml  tunnel.sumo.cfg  tunnel_poi.add.xml  typemap.xml
src/artery/: CMakeLists.txt  StaticNodeManager.cc
src/artery/application/: CAM_object_overview.txt  CPM_Object_overview.txt  CaService.cc  CaService.h  (+26 more)
src/traci/: API.h  BasicModuleMapper.cc  BasicModuleMapper.h  BasicModuleMapper.ned  BasicNodeManager.cc  BasicNodeManager.h  BasicNodeManager.ned  BasicSubscriptionManager.cc  CMakeLists.txt  ConnectLauncher.cc  ConnectLauncher.h  Core.cc  Core.h  Core.ned  ICore.ned  InsertionDelayNodeManager.cc  InsertionDelayNodeManager.h  Launcher.h  LiteAPI.h  Manager.ned  ModuleMapper.h  MovingObjectSink.h  MultiTypeModuleMapper.cc  MultiTypeModuleMapper.h  NodeManager.cc  NodeManager.h  Position.cc  PosixLauncher.cc  PosixLauncher.h  SubscriptionManager.h  TestbedModuleMapper.cc  TestbedModuleMapper.h  TraCIApiProvider.h  VariableCache.cc  VariableCache.h
(+86 files in other folders)
